      purpose of variable, and provides more information so the compiler can make better
      optimizations because it knows the value will never change after initial assignment.
      No functional changes to the API or bugs have been found or resolved as a result of
      this activity - again, this effort is a result of adopting better coding practices.
--------------------------------------------------------------------------------
basic

   support.h
      1) Adding more explicit "std" namespace qualifiers and reducing the number
         of includes (e.g., cstdio, cstdlib, string)

   TcpHandler class
      1) recvData() was modified to check for closed connection or errors.

--------------------------------------------------------------------------------
basicGL

   Image.cpp
      1) readFileBMP() -- Corrected the checks to properly reject files that are not
         bitmap files (bug fix) or other invalid files.


--------------------------------------------------------------------------------
dis

   NetIO class
      1) processElectromagneticEmissionPDU() -- changed to only attempt to process
      the PDU if there were handlers provided.

--------------------------------------------------------------------------------
gui-glut

--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
otw

   CigiClNetworkSignalProcessing class
      1) OnHotResp() -- added support for a CigiHatHotRespV3_2 type argument


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation
 
   Autopilot class
      1) Removed old debug print statements

   Otw class
      1) compareKey2Model() -- Corrected null pointer check on pKeyFedName (bug fix)

   Player class