@@ -89,6 +89,15 @@ void IrSeeker::deleteData()
 }
 
 //------------------------------------------------------------------------------
+// shutdownNotification()
+//------------------------------------------------------------------------------
+bool IrSeeker::shutdownNotification()
+{
+   clearQueues();
+   return BaseClass::shutdownNotification();
+}
+
+//------------------------------------------------------------------------------
 // reset() -- Reset parameters
 //------------------------------------------------------------------------------
 void IrSeeker::reset()
