@@ -72,6 +72,15 @@ void IrSystem::deleteData()
 }
 
 //------------------------------------------------------------------------------
+// shutdownNotification()
+//------------------------------------------------------------------------------
+bool IrSystem::shutdownNotification()
+{
+   setSeeker(0);
+   return BaseClass::shutdownNotification();
+}
+
+//------------------------------------------------------------------------------
 // reset() -- Reset parameters
 //------------------------------------------------------------------------------
 void IrSystem::reset()
